# Proj4

./: README.md
3way-mpi/: 1_thread  3way-mpi.sbatch  3way-mpi.sh  CMakeLists.txt  Makefile  a.out  assess.sbatch  chandra.c  copy.c  mpi  mpi2  mpi_min_ascii  mpi_min_ascii(old).c  mpi_min_ascii.c
3way-mpi/src/: analysis.c  openmp_min_ascii.c
3way-mpi/test/: small_wiki_dump.txt
3way-openmp/: 3way-openmp.sbatch  3way-openmp.sh  CMakeLists.txt  Makefile  a.out  example.c  hello.c  openmp_min_ascii  openmp_min_ascii.c  slurm-5190069.out
3way-openmp/include/: ascii_min_chars.h  openmp_min_ascii.h
3way-openmp/src/: analysis.c  ascii_min_chars.c  openmp_min_ascii.c  test
3way-openmp/test/: medium_file.txt  small_file.txt
3way-pthread/: 3way-pthread.sbatch  3way-pthread.sh  Makefile  pthread_min_ascii  pthread_min_ascii.c  slurm-5132357.out
3way-pthread/include/: openmp_min_ascii.h
